# ableton-control-surface-osc

./: Makefile  README.md  copy_libs.py  pyproject.toml  requirements.txt
AbletonControlSurfaceOSC/: __init__.py  control_surface.py  log.py
AbletonControlSurfaceOSC/live/: __init__.py  util.py
AbletonControlSurfaceOSC/live/application/: __init__.py
AbletonControlSurfaceOSC/live/song/: __init__.py  session_ring.py  tempo.py  time.py  view.py
